--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,9 @@ spring.datasource.url=jdbc:h2:file:~/spring-boot-h2-db102
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driverClassName=org.h2.Driver
-spring.jpa.hibernate.ddl-auto=update
+#FIXME * swapped "update" for "create-drop" for testing
+#spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true 
 
